--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "fantasy", sans-serif;
 }
 .wrapper {
   text-align: center;
@@ -13,19 +13,19 @@ h2 {
 .container {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  width: 306px;
+  width: 500px;
   margin: 50px auto;
 }
 
 .cell {
-  /* font-family: "Permanent Marker", cursive TODO*/
+  font-family: "monspace", sans-serif;
   width: 100px;
   height: 100px;
-  box-shadow: 0 0 0 1px #333333;
-  border: 1px solid #333333;
+  box-shadow: 0 0 0 1px #444444;
+  border: 1px solid #444444;
   cursor: pointer;
   line-height: 100px;
-  font-size: 60px;
+  font-size: 50px;
 }
 .reset-game {
   cursor: pointer;
